--- a/graduation-studies/solid-state-physics.tex
+++ b/graduation-studies/solid-state-physics.tex
@@ -138,25 +138,116 @@
                     \phi = C_1 \varphi_1 + C_2 \varphi_2
             \end{equation}
             と一次結合で表される。
+            この手法のことを\textbf{LCAO法}という。
             この波動関数のエネルギー準位を考えると、元のエネルギー準位よりも低い準位（安定的で結合に寄与する価電子帯）と高い準位（非安定的で電気伝導に寄与する伝導帯）の2つに分裂する。
             前者を\textbf{結合性軌道}、後者を\textbf{反結合性軌道}という。
+            実際、それぞれの波動関数を導出し、それを2乗することにより電子の存在確率を計算すると、結合性たる所以と反結合性たる所以を体感することができるが、ここでは時間の関係でカットする。
+            ちなみに、この結合性軌道にある電子は\textbf{価電子帯}の電子に対応し、反対に反結合性軌道にある原子は\textbf{伝導帯}にある電子に対応する。
 
         \section{イオン結合}
+            陽イオンになりやすい原子と陰イオンになりやすい原子はしばしば\textbf{イオン結合}と呼ばれる、後述の共有結合とは異なる結合をすることがある。
+            この結合が安定するのは、陽イオンにするために必要なエネルギー（イオン化エネルギー）よりも陰イオンになった時に放出されるエネルギー（電子親和力）とクーロンポテンシャルの和の方が大きいからである。
+            つまり、
+            \begin{equation}
+                (イオン化エネルギー) - (電子親和力) - (クーロンポテンシャル) < 0
+            \end{equation}
+            となり、これは孤立原子の状態よりも安定であることを表している。
+            イオン結合における具体的な表式について述べてい。
+            任意のイオン$i$, $j$には、\textbf{ボルン・マイヤーポテンシャル}という斥力ポテンシャルがあり、
+            \begin{equation}
+                U_{ij} = \lambda exp\left( - \frac{r_{ij}}{\rho} \right)
+            \end{equation}
+            と表される。
+            最近接イオン間距離を$R$とし、斥力はそれとしか相互作用しないとし、
+            \begin{equation}
+                r_{ij} = p_{ij}R
+            \end{equation}
+            と書けることを踏まえると、格子としてのポテンシャルは、
+            \begin{equation}
+                U_tot = NU_i = NZ \lambda exp\left( - \frac{r_{ij}}{\rho} \right) - \frac{\alpha q^2 N}{4 \pi \epsilon_0 R }
+            \end{equation}
+            と表される。
+            この式中の$\alpha$は\textbf{マーデルング定数}と呼ばれる量で、
+            \begin{equation}
+                \alpha = \sum_{i,j} \frac{(\pm)}{p_{ij}}
+            \end{equation}
+            と表され、
+
         \section{共有結合}
         \section{金属結合}
         \section{ファン・デル・ワールス結合}
         \section{水素結合}
         
     \chapter{フォノン}
-        p.79~
-        \section{}
-        \section{}
-        \section{}
-        \section{}
-        \section{}
-        \section{}
-        \section{}
-    \section{}
+        \section{位相速度と群速度}
+            波の伝わる速度には、単一の波の場合と波束の場合の2種類ある。
+            単一の波の場合、その波の伝わる速度を\textbf{位相速度}といい、
+            \begin{equation}
+                v_p = \frac{\omega}{k}
+            \end{equation}
+            と表される。
+            それに対して、波束（重ね合わされた波）の場合、その伝わる（ように見える）速度を\textbf{群速度}といい、
+            \begin{equation}
+                v_g = \frac{d\omega}{dk}
+            \end{equation}
+            と表される。
+            当たり前の議論ではあるが、位相速度と群速度は一般には一致しない。
+            群速度を構成する位相速度には振れ幅（分散）があるからである。
+
+        \section{一次元単原子格子の格子振動}
+            格子が単一の原子で構成されている場合を考える。
+            格子の振動のモデルはしばしば原子間にバネを設けたモデルで表現される。
+            今回もそのアプローチをとることとして、全ての原子が同じ角振動数で振動する（基準モード）として考える。
+            詳しい導出の過程は省略するが、角振動数$\omega$は、
+            \begin{equation}
+                \omega(k) = \sqrt{\frac{4K}{M}} \left|\sin{\frac{ka}{2}} \right|
+            \end{equation}
+            と表され、この関係を\textbf{分散関係}という。
+            この言われの所以は、この分散関係によって位相速度や群速度を導出することが可能であることから来ており、それらを決定することで波動の伝搬特性を知ることができるためである。
+            長波長の極限では、
+            \begin{equation}
+                \omega = a \sqrt{\frac{K}{M}}k
+            \end{equation}
+            と表され、角周波数は波数に比例する式が得られる。
+            この性質を、連続媒質中を伝わる音波（弾性波）と同じ性質を満たすことから\textbf{音響モード}という。
+            イメージとしては、格子間弾性的相互作用的なものである。
+
+        \section{一次元二原子格子の格子振動}
+            格子内の原子を一個増やして考えてみたい。
+            実際問題、格子内の原子の数は複数個にして考えることの方が、対称性などの観点から有益なことが多い。
+            詳しい導出過程は省略するが、分散関係は
+            \begin{equation}
+                \omega_{\pm}^2(k) = K \left(\frac{1}{M_1} + \frac{1}{M_2} \right) \pm K \sqrt{\left(\frac{1}{M_1} + \frac{1}{M_2} \right)^2 - \frac{4\sin^2{ka}}{M_1M_2}}
+            \end{equation}
+            と表される。
+            これのうち、$\omega_-$は音響モードを表しており、長波長領域では
+            \begin{equation}
+                \omega(k) = \sqrt{\frac{2K}{M_1 + M_2}}ka
+            \end{equation}
+            と表され、単原子格子の場合と同様に波数$k$に依存するような関数系を持つ。
+            $\omega_+$は、電磁波の吸収などのような光学的な性質から\textbf{光学モード}と呼ばれる。
+            実際にそれぞれの分散関係を図示すると分かるのだが、ここでも省略してしまうことにする。
+
+        \section{三次元格子の格子振動}
+        \section{フォノンによる量子化}
+            N個の粒子から構成される3次元結晶の場合、自由度は3Nで、これは3N個の独立な調和振動子があるとみなすことができる。
+            これにより、
+            \begin{equation}
+                E = \sum_{\boldsymbol{k}, s} \left(n_{\boldsymbol{k},s} + \frac{1}{2}\right) \hbar \omega_s{\boldsymbol{k}}
+            \end{equation}
+            とエネルギーを表現することができる。
+            この式の理解としては、まず3N個ある各モードに対して量子化された粒子（\textbf{フォノン}）が存在する。
+            このフォノンというのは、状態の励起具合を表していて、このフォノンの数が多い（振動の腹が多い）ほどエネルギーが高いということに対応する。
+            各モードの合計のエネルギーが、系のエネルギーになるということである。
+
+        \section{格子比熱}
+            フォノンはボゾン（ボーズ粒子）なので、フェルミ分布関数より
+            \begin{equation}
+                n_{\boldsymbol{k}, s} = \frac{1}{\exp{\beta \hbar \omega_s(\boldsymbol{k})} - 1}
+            \end{equation}
+            と表される。
+
+        \section{熱伝導}
         
     \chapter{自由電子気体}
         6章
