--- a/graduation-studies/solid-state-physics.tex
+++ b/graduation-studies/solid-state-physics.tex
@@ -341,7 +341,7 @@
             という関係が成り立つ。
             つまり、周期性を満たすような波動関数を得られるという定理である。
             そのような電子を\textbf{ブロッホ電子}と呼んだり、そのような状態を\textbf{ブロッホ状態}という。
-            % 結晶運動量、有効質量
+            
 
         \section{空格子近似}
             エネルギーバンドを考える際の第０近似として、\textbf{空格子近似}と呼ばれるものがある。
@@ -375,6 +375,10 @@
 
         \section{強束縛下の電子}
 
+        \section{電子の動力学}
+            量子力学において、
+            % 結晶運動量、加速定理、有効質量
+
         \section{電子と正孔}
 
         \section{フェルミ面}
@@ -385,7 +389,7 @@
         \section{電気抵抗}
         \section{波数空間での電気伝導}
         \section{ボルツマンの輸送方程式}
-        
+
     \chapter{光学的性質}
         15章
     \chapter{磁性}
