--- a/graduation-studies/classical-mechanics.tex
+++ b/graduation-studies/classical-mechanics.tex
@@ -3,7 +3,7 @@
 \usepackage{amsmath}
 \usepackage{physics}
 
-\title{量子力学 - Quantum Mechanics}
+\title{古典力学 - Classical Mechanics}
 
 \begin{document}
 
@@ -11,6 +11,6 @@
 
     \tableofcontents
 
-    \chapter{か}
+    \chapter{位相空間論}
 
 \end{document}
