--- a/graduation-studies/electromagnetism.tex
+++ b/graduation-studies/electromagnetism.tex
@@ -3,7 +3,7 @@
 \usepackage{amsmath}
 \usepackage{physics}
 
-\title{量子力学 - Quantum Mechanics}
+\title{電磁気学 - Electromagnetism}
 
 \begin{document}
 
@@ -11,6 +11,6 @@
 
     \tableofcontents
 
-    \chapter{か}
+    \chapter{das}
 
 \end{document}
